IMPALA-9831: Fix off by one error in condition for ValidateColumnOffsets()

ParquetMetadataUtils::ValidateColumnOffsets() returns an error if the end of
the column is beyond the end of the file (i.e. offset > end_of_file).
Instead, because there is a footer, the end of column must not be the end
of the file either, so it should use offset >= end_of_file. Otherwise,
a subsequent DCHECK in ParquetPageReader using the stricter condition will
fire.

Testing:
 - Core job

Change-Id: I16bd6dfbb8eeacc1cb854ed4a3c2ed9f1c3aa11f
Reviewed-on: http://gerrit.cloudera.org:8080/16086
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>